# RAG_Grayson

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-AGPL-3.0  Makefile  README.md  docker-compose.yml  ingest_theology.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
chroma_db/: chroma.sqlite3
docs/: README.md  architecture.md  overview.md
frontend/: README.md  index.html
scripts/: README.md  setup-windows-buildchain.ps1
src/: README.md  __init__.py  config.py  demo_simple.py  embeddings.py  ingest.py  llm.py  main.py  pdf_lookup.py  usage_tracker.py  vectorstore.py
tests/: README.md  __init__.py  conftest.py  test_main.py
